--- a/tags.html
+++ b/tags.html
@@ -14,5 +14,6 @@ group: navigation
 {% for tag in site.tags %}
     <h1 id="{{ tag[0] }}-ref" style="border:1px #bbb dashed;padding:10px;background-color:#eee">{{ tag[0] }}</h1>
     {% assign pages_list = tag[1] %}
+    {% assign cur_tag = tag[0]%}
     {% include JB/pages_list %}
 {% endfor %}
